# SPDX-FileCopyrightText: Magenta ApS <https://magenta.dk>
# SPDX-License-Identifier: MPL-2.0
[tool.poetry]
name = "amqp2http"
version = "0.0.0" # versioning handled by conventional commits
description = "Rammearkitektur AMQP to HTTP service."
authors = ["Magenta ApS <info@magenta.dk>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.11"
structlog = "^24.1.0"
fastramqpi = "^7.2.1"
pydantic = {version = "^1.10.15", extras = ["dotenv"]}
more-itertools = "^9.1.0"
uvicorn = "^0.29.0"
fastapi = ">=0.101"
httpx = "^0.27.0"

[tool.poetry.group.pre-commit.dependencies]
mypy = "^1.8.0"
reorder-python-imports = "^3.12.0"
pre-commit = "^3.6.0"
ruff = "^0.2.1"
deptry = "^0.14.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.19.0"
pytest-cov = "^4.1.0"
pytest-split = "^0.8.2"
pytest-xdist = "^3.5.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.1"
respx = "^0.21.1"
rich = "^13.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode="auto"

[tool.mypy]
warn_return_any = "True"
warn_unused_configs = "True"
check_untyped_defs = "False"  # TODO: Turn on
disallow_untyped_defs = "False"  # TODO: Turn on
plugins = "pydantic.mypy"

[tool.flake8]
max-line-length = 999
exclude = [
    ".git", "__pycache__", ".mypy_cache", ".pytest_cache", ".venv", ".gitlab"
]

[tool.deptry.per_rule_ignores]
DEP002 = [
  # uvicorn is used by the Dockerfile
  "uvicorn",
]
