# SPDX-FileCopyrightText: Magenta ApS <https://magenta.dk>
# SPDX-License-Identifier: MPL-2.0
[tool.poetry]
name = "FastRAMQPI docs"
version = "0.1.0"
description = "FastRAMQPI dokumentation"
authors = ["Magenta <info@magenta.dk>"]
license = "MPL-2.0"
documentation = ""
readme = "README.md"
homepage = "https://magenta.dk/"
repository = "https://git.magenta.dk/rammearkitektur/FastRAMQPI"
keywords = ["FastRAMQPI", "docs", "documentation"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-material = "^8.1.4"
Jinja2 = "^3.0.3"
pydantic = "^1.9.0"
mkdocs = "^1.3.1"
mkdocstrings = {extras = ["python"], version = "^0.24.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
